--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 streamlit>=1.28.0
 pandas>=2.0.0
-numpy>=1.24.0
 plotly>=5.15.0
+sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
-sqlalchemy>=1.4.0
+yfinance>=0.2.0
+mftool>=0.3.0
+requests>=2.31.0
 python-dotenv>=1.0.0
+hashlib
+json
+datetime
+pathlib
+threading
+concurrent.futures
+hashlib
