--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,27 @@
-# Core Streamlit Application
+# Core dependencies
 streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.21.0
+plotly>=5.0.0
 
-# Data Processing
-pandas>=2.0.0
-numpy>=1.24.0
-
-# Visualization
-plotly>=5.15.0
+# Financial data APIs
+yfinance>=0.2.0
+mftool>=0.3.0
+requests>=2.28.0
+httpx>=0.24.0
 
 # Database
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
+supabase>=1.0.0
+postgrest>=0.10.0
 
-# Stock Price APIs
-yfinance
-mftool
-requests>=2.31.0
-
-# Web Scraping (for indstocks API)
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
-
-# Excel File Support
-openpyxl>=3.1.0
+# File handling
+openpyxl>=3.0.0
 xlrd>=2.0.0
 
-# Environment Variables
-python-dotenv>=1.0.0
+# Utilities
+python-dateutil>=2.8.0
+pytz>=2022.1
 
-# Supabase (if using Supabase client)
-supabase>=2.0.0
-
+# For Streamlit Cloud compatibility
+urllib3>=1.26.0
+certifi>=2022.12.7
