--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ mftool>=0.3.0
 requests>=2.28.0
 httpx>=0.24.0
 
-# Database
+# Database and ORM
 supabase>=1.0.0
 postgrest>=0.10.0
+psycopg2-binary>=2.9.0
+sqlalchemy>=1.4.0
 
 # File handling
 openpyxl>=3.0.0
@@ -22,7 +24,11 @@ xlrd>=2.0.0
 # Utilities
 python-dateutil>=2.8.0
 pytz>=2022.1
-
-# For Streamlit Cloud compatibility
 urllib3>=1.26.0
 certifi>=2022.12.7
+
+# Additional dependencies
+typing-extensions>=4.0.0
+
+# Streamlit Cloud specific
+gunicorn>=20.1.0
