--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ matplotlib>=3.5.0
 # Financial data APIs
 yfinance>=0.2.0
 mftool>=0.3.0
+indstocks>=0.1.0
 requests>=2.28.0
 httpx>=0.24.0
 
@@ -29,6 +30,14 @@ certifi>=2022.12.7
 
 # Additional dependencies
 typing-extensions>=4.0.0
+
+# AI and Chatbot
+openai>=1.0.0
+PyPDF2>=3.0.0
+pdfplumber>=0.9.0
+pytesseract>=0.3.10
+Pillow>=10.0.0
+pdf2image>=1.16.0
 
 # Streamlit Cloud specific
 gunicorn>=20.1.0
