--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Python 3.9 Compatible Requirements
 # Core dependencies
 streamlit>=1.28.0
 pandas>=1.5.0
@@ -8,25 +9,17 @@ matplotlib>=3.5.0
 # Financial data APIs
 yfinance>=0.2.0
 mftool>=0.3.0
-indstocks>=0.1.0
+# indstocks>=0.1.0  # Requires Python >=3.10, not compatible with Python 3.9
 requests>=2.28.0
 httpx>=0.24.0
 
 # Database and ORM
 supabase>=1.0.0
-postgrest>=0.10.0
 psycopg2-binary>=2.9.0
-sqlalchemy>=1.4.0
 
-# File handling
+# File processing
 openpyxl>=3.0.0
-xlrd>=2.0.0
-
-# Utilities
-python-dateutil>=2.8.0
-pytz>=2022.1
-urllib3>=1.26.0
-certifi>=2022.12.7
+python-docx>=0.8.0
 
 # Additional dependencies
 typing-extensions>=4.0.0
