--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,21 @@ httpx>=0.24.0
 
 # Database and ORM
 supabase>=1.0.0
+postgrest>=0.10.0
 psycopg2-binary>=2.9.0
+sqlalchemy>=1.4.0
 
 # File processing
 openpyxl>=3.0.0
+xlrd>=2.0.0
 python-docx>=0.8.0
 
 # Additional dependencies
 typing-extensions>=4.0.0
+python-dateutil>=2.8.0
+pytz>=2022.1
+urllib3>=1.26.0
+certifi>=2022.12.7
 
 # AI and Chatbot
 openai>=1.0.0
