--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ certifi>=2022.12.7
 
 # AI and Chatbot
 openai>=1.0.0
+google-generativeai>=0.3.0
 PyPDF2>=3.0.0
 pdfplumber>=0.9.0
 pytesseract>=0.3.10
