--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ mftool>=0.3.0
 # indstocks>=0.1.0  # Requires Python >=3.10, not compatible with Python 3.9
 requests>=2.28.0
 httpx>=0.24.0
+beautifulsoup4>=4.11.0
+html5lib>=1.1
+lxml>=4.9.0
+selenium>=4.10.0  # For web scraping if needed
 
 # Database and ORM
 supabase>=1.0.0
